A fix and test case for bug#6058 "Prepared statements return '0000-00-00' (date) as empty  string": preserve time type (date, time, or datetime) for zero dates, times, and datetimes.